# i18n-leptos

./: Cargo.toml
i18n-leptos-macros/: Cargo.toml
i18n-leptos-macros/src/: lib.rs  rattr.rs  rtr.rs
src/: ctx.rs  lib.rs  utils.rs
