[package]
name = "i18n-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.0-beta" }
leptos-use = { version = "0.16.0-beta", default-features = false }
i18n = { git = "ssh://git@github.com/Instant-Reactive-Systems/i18n.git" }
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Storage",
  "UrlSearchParams",
  "HtmlDocument",
  "CustomEvent",
  "CustomEventInit",
] }

[features]
default = [
  "leptos-use/use_event_listener",
  "leptos-use/use_interval_fn",
]
ssr = []

