[package]
name = "i18n-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
i18n-leptos-macros = { path = "./i18n-leptos-macros" }
leptos = { version = "0.8" }
leptos-use = { version = "0.16.0-beta", default-features = false }
i18n = { git = "https://github.com/Instant-Reactive-Systems/i18n.git" }
log = "0.4"
thiserror = "1.0"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Storage",
  "UrlSearchParams",
  "HtmlDocument",
  "CustomEvent",
  "CustomEventInit",
] }

[features]
default = [
  "leptos-use/use_event_listener",
  "leptos-use/use_interval_fn",
]
ssr = []

[workspace]
members = ["i18n-leptos-macros"]
